--- a/index.ipynb
+++ b/index.ipynb
@@ -33,7 +33,8 @@
    "outputs": [],
    "source": [
     "# Your solution here \n",
-    "# Answer: 5 cups of tea and 5 cups of coffee = 15 dollars"
+    "# Answer: 5 cups of tea and 5 cups of coffee = 15 dollars\n",
+    "\n"
    ]
   },
   {
